tests/fixtures/invalid/typedef_unknown_enum.c
enum Status { READY = 1 };
typedef enum Missing Missing;

int main() {
    return READY;
}
